# unesco_reader

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  code_format.yml  documentation.yml  release.yml  tests.yml
docs/: Makefile  Other functionality.ipynb  Tutorial.ipynb  changelog.md  conf.py  contributing.md  example.ipynb  index.md  installation.md  make.bat  unesco_reader.md  usage.md
src/unesco_reader/: __init__.py  api.py  api_versions.py  common.py  config.py  core.py  data.py  exceptions.py  formatting.py  frame.py  geo_units.py  indicators.py  read.py  scraper.py  uis.py
src/unesco_reader/bulk/: __init__.py  formatting.py  read.py  uis.py
src/unesco_reader/glossaries/: uis_datasets.csv
tests/: __init__.py  conftest.py  mock_api_response.py  test_api.py  test_cache.py  test_common.py  test_core.py  test_formatting.py  test_read.py  test_scraper.py  test_smoke_core.py  test_uis.py  test_unesco_reader.py  test_utils.py
tests/test_bulk/: test_api.py  test_uis.py
unesco/: __init__.py  api.py  unesco.py  utils.py
unesco_reader/: __init__.py  api.py  common.py  config.py  datasets.csv  import_data.py  test.py  test_2.py  uis.py  utils.py
unesco_reader/data/: SDG_COUNTRY.csv  SDG_LABEL.csv
unesco_reader/glossaries/: uis_datasets.csv
