[tool.poetry]
name = "unesco-reader"
version = "1.0.0"
description = "Pythonic access to UNESCO data"
authors = ["Luca Picci <lpicci96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.2.1"
tabulate = "^0.9.0"
bs4 = "^0.0.2"
myst-parser = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.3.0"
jupyter = "^1.0.0"
sphinx = "^7.2.6"
myst-nb = "^1.0.0"
autoapi = "^2.0.1"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-prompt = "^1.8.0"
sphinx-copybutton = "^0.5.2"
sphinx-autoapi = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
