[tool.poetry]
name = "unesco-reader"
version = "1.0.0"
description = "Pythonic access to UNESCO data"
authors = ["Luca Picci"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4"
pandas = "^2.2.1"
tabulate = "^0.9.0"
bs4 = "^0.0.2"
myst-parser = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.3.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
